[package]
name = "cashu-pol"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cashu-pol"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
cdk = { git = "https://github.com/cashubtc/cdk", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
bitcoin = { version = "0.31", features = ["serde"] }
rand = "0.8"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
redb = "1.5"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
